<resources>
    <string name="app_name">Welcome to PiTection</string>


    <string name="action_settings">Settings</string>
    <string name="login_button">Login</string>
    <string name="user_login_default">Username</string>
    <string name="welcome_login">Welcome</string>
    <string name="login_auto">Automatic Login</string>
    <string name="login_error">Invalid Login</string>
    <string name="login_ok">Login Ok!</string>
    <string name="title_activity_register">Get Started Here</string>

    <string name="registerPasswordConfirm">Confirm Password</string>
    <string name="registerUsername">Username</string>
    <string name="registerButton">Register</string>
    <string name="registerPassword">Enter Password</string>
    <string name="title_activity_login">Welcome to PiTection</string>

    <string name="hello_world">Hello world!</string>
    <string name="logoutButton">Logout</string>
    <string name="registerBtn">Register</string>
    <string name="armSystem">System</string>
    <string name="toggleButton">Not Armed</string>
    <string name="logs">Logs</string>
    <string name="devicebtntxt">Devices</string>
    <string name="title_device_list">Devices</string>
    <string name="title_device_detail">Device Detail</string>
    <string name="title_activity_device">Devices</string>
    <string name="title_activity_event_logs">Device Logs</string>
    <string name="system_log">System Logs</string>
    <string name="title_activity_pre_registration">PreRegistration</string>


</resources>
