<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:background="@color/background"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainScreen"

    >



    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/user_login_default"
        android:ems="10"
        android:id="@+id/usernameField"

        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:textColor="@color/text"


        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordField"
        android:layout_marginTop="54dp"
        android:layout_below="@+id/usernameField"
        android:layout_centerHorizontal="true"
        android:text="Password"
        android:password="false"
        android:textColor="@color/text"

       />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:id="@+id/loginBtn"
        android:layout_below="@+id/passwordField"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:textColor="@color/text"
        android:background="@color/button"
        android:onClick="startSystemService"
        />

    <!--Login error message, default invisible -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/login_error"
        android:id="@+id/loginError"
        android:layout_below="@+id/loginBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp"
        android:textColor="#ff563d"
        android:visibility="invisible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/login_ok"
        android:id="@+id/textView2"
        android:layout_below="@+id/loginError"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        android:textColor="#32ff5e" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerBtn"
        android:id="@+id/registerBtn"
        android:layout_alignTop="@+id/loginError"
        android:layout_centerHorizontal="true"
        android:textColor="@color/text"
        android:background="@color/button"/>



</RelativeLayout>

