<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.pitectors.pitection.RegisterActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/registerUsername"
        android:ems="10"
        android:id="@+id/registerUsername"
        android:layout_marginTop="51dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/registerUserpass"
        android:layout_marginTop="41dp"
        android:layout_below="@+id/registerUsername"
        android:layout_alignLeft="@+id/registerUsername"
        android:layout_alignStart="@+id/registerUsername" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/registerConfirm"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/registerUserpass"
        android:layout_alignStart="@+id/registerUserpass" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/registerPassword"
        android:id="@+id/textView3"
        android:layout_below="@+id/registerUserpass"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/registerPasswordConfirm"
        android:id="@+id/textView4"
        android:layout_below="@+id/registerConfirm"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerButton"
        android:id="@+id/btnRegister"
        android:layout_marginTop="41dp"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
